[rosbiz_view] iterating.

--- a/rosbiz_view/index.html
+++ b/rosbiz_view/index.html
@@ -52,149 +52,136 @@
 				</section>
 
                 <section id="WhoAmI">
-                    <div style="float:left;">
-                        <img width="200" height="100%" src="images/innovation_team_logo.jpg" alt="Yujin Robot"><br/>
-                        <img width="200" height="100%" src="images/australia_globe.png" alt="Australia"><br/>
-                        <img width="200" height="100%" src="images/tux-robot.png" alt="Tux Robot">
-                    </div>
-                    <h2>Who Am I?</h2>
-                    <p>
-                        Daniel Stonier
-                    </p>
-                    <p>
-                        Yujin Robot <a href="http://inno.yujinrobot.com">Innovation Team</a> Leader.<br/><br/>
-                        <small>
-                            Embedded/Control Engineer<br/>Algorithms Monkey<br/>Software Architect<br/><br/>
-                            <i>B Science., B Electrical Engineering, Phd. Mathematics.</i>
-                        </small>
-                    </p>
-                </section>
-                <section id="WhoAmI2">
-                    <h2>Who Am I?</h2>
-                    <div>
-                    <p style="text-align: left;">Robotics background...</p>
-                    <small>
-                        <ol>
-                            <li class="fragment"><b style="color:magenta;">University</b>
-                                <ul>
-        	                        <li>More Robotics/AI in math than in my engineering degree</li>
-                                    <li>Postdoc at KAIST in a robotics lab</li>
-                                </ul>
-                            </li>
-                            <li class="fragment"><b style="color:magenta;">Yujin Developer</b>
-                                <ul>
-                                    <li>Control Engineer</li>
-                                    <li>Vision system in Yujin cleaning robots</li>
-                                    <li>Had to accelerate development from one robot to the next</li>
-                                    <ul>
-                                        <li>Found ROS 0.4 (2008)</li>
-                                    </ul>
-                                    <li>Had to implement processes for teams @ Yujin</li>
-                                    <li>Moved the company across to ROS after a trial period</li>
-                                </ul>
-                            </li>
-                            <li class="fragment"><b style="color:magenta;">ROS Expert</b>
-                                <ul>
-                                    <li>Contributed many patches for early ROS (0.x.y)</li>
-                                    <li>Participated in design sessions for core ROS components</li>
-                                    <li>ROS software package maintainer</li>
-                                    <li>Turtlebot 2 Project Lead - the ROS reference robot</li>
-                                    <li>Collaborated with international ROS teams</li>
-                                    <li>Annual speaker at ROSCon conferences</li>
-                                    <li>Regular contact with the ROS directors</li>
-                                </ul>
-                            </li>
-                        </ol>
-                    </small>
-                    </div>
-                    <aside class="notes">
-                        Some blah about my journey
-                    </aside>
-                </section>
-                <section id="WhoAmIPictures">
-                    <h2>Who Am I?</h2>
-                    <div style="line-height: 300px;">
-                      <img style="display: inline-block; vertical-align: middle; line-height: normal; padding: 30px;" width="250" src="images/geek.jpg" alt="Math Geek"/>
-                      <img style="display: inline-block; vertical-align: middle; line-height: normal; margin-left: 30px; margin-right: 30px;" width="50" src="images/arrow_right_blue.png" alt="Arrow"/>
-                      <img style="display: inline-block; vertical-align: middle; line-height: normal; padding: 30px;" src="images/terminator.jpg" alt="Terminator"/>
-                    </div>
-                </section>
-                <section id="WhoAmIPictures2">
-                    <h2>Who Am I?</h2>
-                    <div style="line-height: 300px;">
-                      <img style="display: inline-block; vertical-align: middle; line-height: normal; padding: 30px;" width="250" src="images/geek.jpg" alt="Math Geek"/>
-                      <img style="display: inline-block; vertical-align: middle; line-height: normal; margin-left: 30px; margin-right: 30px;" width="50" src="images/arrow_right_blue.png" alt="Arrow"/>
-                      <img style="display: inline-block; vertical-align: middle; line-height: normal; padding: 30px;" src="images/replacement.jpg" alt="Replacement"/>
-                    </div>
+	               <section id="WhoAmI1">
+                        <div style="float:left;">
+	                        <img width="200" height="100%" src="images/innovation_team_logo.jpg" alt="Yujin Robot"><br/>
+	                        <img width="200" height="100%" src="images/australia_globe.png" alt="Australia"><br/>
+	                        <img width="200" height="100%" src="images/tux-robot.png" alt="Tux Robot">
+	                    </div>
+	                    <h2>Who Am I?</h2>
+	                    <p>
+	                        Daniel Stonier
+	                    </p>
+	                    <p>
+	                        Yujin Robot <a href="http://inno.yujinrobot.com">Innovation Team</a> Leader.<br/><br/>
+	                        <small>
+	                            Embedded/Control Engineer<br/>Algorithms Monkey<br/>Software Architect<br/><br/>
+	                            <i>B Science., B Electrical Engineering, Phd. Mathematics.</i>
+	                        </small>
+	                    </p>
+                    </section>
+	                <section id="WhoAmI2">
+	                    <h2>Robotics Background</h2>
+	                    <div>
+	                    <small>
+	                        <ol>
+	                            <li><b style="color:magenta;">University</b>
+	                                <ul>
+	                                    <li>Studied robotics/AI in math and engineering</li>
+	                                    <li>PhD in Dynamical Systems</li>
+	                                    <li>Postdoc at KAIST in a robotics lab</li>
+	                                </ul>
+	                            </li>
+	                            <li><b style="color:magenta;">Yujin Developer</b>
+	                                <ul>
+	                                    <li>Control Engineer</li>
+	                                    <li>Vision SLAM in Yujin cleaning robots</li>
+	                                    <li>Required to deploy robotic software across a variety robots</li>
+	                                    <ul>
+	                                        <li>Found ROS 0.4 (2008)</li>
+	                                    </ul>
+	                                    <li>Transitioned the company to ROS (2010))</li>
+	                                </ul>
+	                            </li>
+	                            <li><b style="color:magenta;">ROS Expert</b>
+	                                <ul>
+	                                    <li>Contributed many patches for early ROS (0.x.y)</li>
+	                                    <li>Design sessions for core ROS components</li>
+	                                    <li>ROS software package maintainer</li>
+	                                    <li>Turtlebot 2 Project Lead - the ROS reference robot</li>
+	                                    <li>Collaborated with international ROS teams</li>
+	                                    <li>Annual speaker at ROSCon conferences</li>
+	                                    <li>Regular contact with the ROS directors</li>
+	                                </ul>
+	                            </li>
+	                        </ol>
+	                    </small>
+	                    </div>
+	                    <aside class="notes">
+	                        Some blah about my journey
+	                    </aside>
+                   </section>
                 </section>
                 <section id="RobotGlue">
-                    <h2>Robot Glue</h2>
-                    <div style="line-height: 200px;">
-                      <img style="display: inline-block; vertical-align: middle; line-height: normal; padding: 30px;" width="300" src="images/glue.jpg" alt="Replacement"/>
-                      <div style="display: inline-block; vertical-align: middle; line-height: normal; padding: 30px;">What is glue all about?</div>
-                    </div>
-                    <br/>
-                    <ol>
-                        <li class="fragment">Stick stuff together to <span style="color:cyan;">quickly</span> assemble assorted things.</li>
-                        <li class="fragment">Stick stuff together to make something <span style="color:magenta;">big</span>.</li>
-                        <li class="fragment">Stick <span style="color:yellow;">somebody else's stuff</span> together to leave everyone else for dead.</li>
-                    </ol>
-                    <aside class="notes">
-                    </aside>
-                </section>
-                <section id="HardwareGlue">
-                    <h2>IBM Compatible PC</h2>
-                    <p style="text-align: left;">The glue for computer hardware...</p>
-                    <img style="margin-left:auto; margin-right: auto; width: 600px;" src="images/ibm.jpg" alt="IBM"/>
-                    <aside class="notes">
-                    </aside>
-                </section>
-                <section id="SoftwareGlue">
-                    <h2>Windows OS</h2>
-                    <p style="text-align: left;">The glue for software application development...</p>
-                    <img style="margin-left:auto; margin-right: auto; width: 600px;" src="images/windows.jpg" alt="IBM"/>
-                    <aside class="notes">
-                    </aside>
-                </section>
-                <section id="HTMLGlue">
-                    <h2>The Web & HTML</h2>
-                    <p style="text-align: left;">The glue for connecting and businesses to the world ...</p>
-                    <img style="margin-left:auto; margin-right: auto; width: 400px;" src="images/web.jpg" alt="IBM"/>
-                    <aside class="notes">
-                    </aside>
-                </section>
-                <section id="OtherGlue">
-                    <h2>Others</h2>
-                    <ul>
-                        <li><span style="color:cyan;">Web 2.0 & Cloud</span> - software independant of platform.</li>
-                        <li class="fragment"><span style="color:cyan;">iOS/Android</span> - pc explosion in the hand</li>
-                        <li class="fragment"><span style="color:cyan;">IOT</span> - <span style="color:magenta;">still trying to find the glue....</span></li>
-                    </ul>
-                    <aside class="notes">
-                    </aside>
-                </section>
-                <section id="GlueSummary">
-                    <h2>What is the effect of the Glue?</h2>
-                    <p style="text-align: left;">From everyone trying to play on their own playing field...</p>
-                    <div style="line-height: 300px;">
-                      <img style="display: inline-block; vertical-align: middle; line-height: normal;" width="250" src="images/field_alone.jpg" alt="Math Geek"/>
-                      <img style="display: inline-block; vertical-align: middle; line-height: normal;" width="250" src="images/field_alone.jpg" alt="Math Geek"/>
-                      <img style="display: inline-block; vertical-align: middle; line-height: normal;" width="250" src="images/field_alone.jpg" alt="Math Geek"/>
-                    </div>
-                    <aside class="notes">
-                        Overview
-                    </aside>
-                </section>
-                <section id="GlueSummary2">
-                    <h2>What is the effect of the Glue?</h2>
-                    <p style="text-align: left;">To just one playing field....</p>
-                    <div style="line-height: 300px;">
-                      <img style="display: inline-block; vertical-align: middle; line-height: normal;" width="400" src="images/field.jpg" alt="Math Geek"/>
-                    </div>
-                    <p style="text-align: right; color: yellow;">GAME ON!</p>
-                    <aside class="notes">
-                        Overview
-                    </aside>
+	                <section id="WhatIsRobotGlue">
+	                    <h2>Glue</h2>
+	                    <div style="line-height: 200px;">
+	                      <img style="display: inline-block; vertical-align: middle; line-height: normal; padding: 30px;" width="300" src="images/glue.jpg" alt="Replacement"/>
+	                      <div style="display: inline-block; vertical-align: middle; line-height: normal; padding: 30px;">What is glue all about?</div>
+	                    </div>
+	                    <br/>
+	                    <ol>
+	                        <li class="fragment">Stick stuff together to <span style="color:cyan;">quickly</span> assemble assorted things.</li>
+	                        <li class="fragment">Stick stuff together to make something <span style="color:magenta;">big</span>.</li>
+	                        <li class="fragment">Stick <span style="color:yellow;">somebody else's stuff</span> together to leave everyone else for dead.</li>
+	                    </ol>
+	                    <aside class="notes">
+	                    </aside>
+                    </section>
+	                <section id="SomeKindsOfGlue">
+                        <h2>Some Kinds of Glue</h2>
+	                    <table>
+	                      <tr>
+	                        <td>
+		                        <h4 style="text-align: center;">IBM Compatible PC</h4>
+		                        <small>
+	      	                        <p style="text-align: center;">For computer hardware.</p>
+			                        <img style="margin-left:auto; margin-right: auto; width: 300px;" src="images/ibm.jpg" alt="IBM"/>
+                                </small>
+		                    </td>
+                            <td>
+                                <h4 style="text-align: center;">Windows OS</h4>
+                                <small>
+                                    <p style="text-align: center;">For software applications.</p>
+                                    <img style="margin-left:auto; margin-right: auto; width: 300px;" src="images/windows.jpg" alt="IBM"/>
+                                </small>
+                            </td>
+                            <td>
+                                <h4 style="text-align: center;">The Web & HTML</h4>
+                                <small>
+                                    <p style="text-align: center;">For connecting businesses.</p>
+                                    <img style="margin-left:auto; margin-right: auto; width: 280px;" src="images/web.jpg" alt="Web"/>
+                                </small>
+                            </td>
+	                      </tr>
+	                    </table>
+	                    <h4>Others</h4>
+	                    <ul>
+	                        <li><span style="color:cyan;">Web 2.0 & Cloud</span> - software independent of platform.</li>
+	                        <li><span style="color:cyan;">iOS/Android</span> - pc explosion in the hand</li>
+	                        <li><span style="color:cyan;">IOT</span> - <span style="color:magenta;">still trying to find the glue....</span></li>
+	                    </ul>
+	                    <aside class="notes">
+	                    </aside>
+	                </section>
+	                <section id="GlueSummary">
+	                    <h2>What is the effect of the Glue?</h2>
+	                    <p style="text-align: left;">From everyone on their own playing field</p>
+	                    <div style="line-height: 250px; float: left;">
+	                      <img style="display: inline-block; vertical-align: middle; line-height: normal;" width="200" src="images/field_alone.jpg" alt="Math Geek"/>
+	                      <img style="display: inline-block; vertical-align: middle; line-height: normal;" width="200" src="images/field_alone.jpg" alt="Math Geek"/>
+	                      <img style="display: inline-block; vertical-align: middle; line-height: normal;" width="200" src="images/field_alone.jpg" alt="Math Geek"/>
+	                    </div>
+	                    <div class="fragment" style="line-height: 250px;">
+	                      <img style="display: inline-block; margin-right: 10px; border: none; background: none; vertical-align: middle; line-height: normal;" width="50" src="images/arrow_right_blue.png" alt="Math Geek"/>
+	                      <img style="display: inline-block; vertical-align: middle; line-height: normal;" width="200" src="images/field.jpg" alt="Math Geek"/>
+	                      <br style="clear: left;"/>
+	                      <p style="text-align: right;">To just one playing field....<span style="text-align: right; color: yellow;">GAME ON!</span></p>
+	                    </div>
+	                    <aside class="notes">
+	                        Overview
+	                    </aside>
+                    </section>
                 </section>
                 <section id="RobotsAndGlue">
                     <h2>Robots and Glue?</h2>
